# chameleondb

./: README.md
.github/workflows/: release.yml
chameleon/: .gitignore  Makefile  docker-compose.test.yml  go.mod  go.sum
chameleon-core/: .gitignore  Cargo.toml  test_sql_output.rs
chameleon-core/include/: chameleon.h
chameleon-core/src/: error.rs  lib.rs
chameleon-core/src/ast/: mod.rs
chameleon-core/src/ffi/: mod.rs
chameleon-core/src/mutation/: mod.rs
chameleon-core/src/parser/: mod.rs  schema.lalrpop
chameleon-core/src/query/: ast.rs  filter.rs  mod.rs
chameleon-core/src/sql/: generator.rs  mod.rs  naming.rs
chameleon-core/tests/: ffi_integration.rs
chameleon/cmd/chameleon/: check.go  config.go  init.go  journal.go  main.go  migrate.go  query.go  root.go  validate.go  version.go
chameleon/internal/admin/: directory.go
chameleon/internal/config/: .chameleon.yml.template  loader.go  schema.go  schema_test.go
chameleon/internal/ffi/: bindings.go
chameleon/internal/journal/: logger.go
chameleon/internal/schema/: loader.go  merger.go
chameleon/internal/state/: tracker.go
chameleon/pkg/engine/: connector.go  contracts.go  debug.go  debug_test.go  engine.go  engine_test.go  errors.go  errors_parse.go  errors_validation.go  executor.go  query.go  registry.go  schema.go  validation.go
chameleon/pkg/engine/mutation/: builders.go  (+4 more)
chameleon/pkg/mutation/: builders.go  factory.go  ffi.go
chameleon/tests/fixtures/: test_schema.cham
chameleon/tests/integration/: migration_test.go  query_test.go  setup_test.go
examples/: test-error.cham
