[package]
name = "chameleon-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib para FFI, rlib para tests

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
pretty_assertions = "1.4"